--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.5",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "follow-redirects": "^1.15.0",
     "fs": "^0.0.1-security",
     "react": "^18.1.0",
